test/compile-fail/resolution/type-existence/type-alias-trait-not-type/expected.txt
error: expected type, found trait `X`
 --> top.rhdl:2:9
  |
2 | type a = X;
  |          ^ not a type
